# wgrpcd-rs

./: .gitignore  Cargo.toml  README.md  build.rs
init-scripts/: cloud-init-wgrpcd.yaml
proto/: wgrpcd.proto
src/: firewall.rs  main.rs  service.rs  vpn.rs
